# little-star

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
demo/: Audio.cpp  Audio.h  Buffer.h  Camera.cpp  Camera.h  Data.h  Demo.cpp  Demo.h  Descriptor.h  Engine.cpp  Engine.h  GLFW.cpp  GLFW.h  GPU.cpp  GPU.h  GUI.cpp  GUI.h  Image.cpp  Image.h  Model.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Storage.h  SurfaceMesh.h  TangentSpace.h  Uniform.h  Utils.h  VersionNumber.h  Vertex.h  Vulkan.cpp  Vulkan.h  VulkanDescriptors.cpp  VulkanMemory.cpp  VulkanModels.cpp  VulkanPipelines.cpp  VulkanRender.cpp  VulkanSim.cpp  main.cpp
demo/models/astronaut/: LICENSE.txt  astronaut.gltf
demo/models/astronaut/textures/: material_0_normal.ktx2  material_0_occlusion.ktx2  material_0_specularGlossiness.ktx2  material_2_occlusion.ktx2  material_2_specularGlossiness.ktx2
demo/models/ball/: ball.gltf
demo/models/ball/meshes/: ball.msh
demo/models/ball/textures/: LICENSE.txt
demo/models/flag/: flag.gltf
demo/models/flag/meshes/: flag.msh
demo/models/flag/textures/: LICENSE.txt
demo/models/moon/: moon.gltf
demo/models/moon/textures/: LICENSE.txt
demo/models/star/: star.gltf
demo/shaders/: spatial.hlsl  state.hlsl
demo/shaders/depth/: depth.vs.hlsl
demo/shaders/gui/: gui.ps.hlsl  gui.vs.hlsl
demo/shaders/lighting/: lighting.ps.hlsl  lighting.vs.hlsl
demo/shaders/particle/: particle.ps.hlsl  particle.vs.hlsl
demo/shaders/post/: post.ps.hlsl  post.vs.hlsl
demo/shaders/skybox/: skybox.ps.hlsl  skybox.vs.hlsl
demo/shaders/spatial-collect/: spatial-collect.cs.hlsl
demo/shaders/spatial-groupsort/: spatial-groupsort.cs.hlsl
demo/shaders/spatial-hash/: spatial-hash.cs.hlsl
demo/shaders/spatial-sort/: spatial-sort.cs.hlsl
demo/shaders/star-update/: star-update.cs.hlsl
demo/shaders/xpbd-correct/: xpbd-correct.cs.hlsl
demo/shaders/xpbd-dist/: xpbd-dist.cs.hlsl
demo/shaders/xpbd-objcoll/: xpbd-objcoll.cs.hlsl
demo/shaders/xpbd-pcoll/: xpbd-pcoll.cs.hlsl
demo/shaders/xpbd-predict/: xpbd-predict.cs.hlsl
demo/shaders/xpbd-vol/: xpbd-vol.cs.hlsl
demo/sounds/: LICENSE.txt
demo/textures/: LICENSE.txt
demo/textures/brdf/: brdf.ktx2
demo/textures/irradiance/: irradiance.ktx2
